# CAIR_SWE_learning

./: .gitmodules  README.md
Code_Tech_and_Tutorials_CMake/0_using_makefile_manually/: out
Code_Tech_and_Tutorials_CMake/2_using_somelibdemo_Static_Built_library/src/: main.cpp
Code_Tech_and_Tutorials_CMake/3_somelibdemo_Static_lib_and_GIT_submodule_to_use_a_repo_lib/: readme.txt
Code_Tech_and_Tutorials_CMake/3_somelibdemo_Static_lib_and_GIT_submodule_to_use_a_repo_lib/somelibdemo_as_static_lib/: CMakeLists.txt
Code_Tech_and_Tutorials_CMake/3_somelibdemo_Static_lib_and_GIT_submodule_to_use_a_repo_lib/somelibdemo_as_static_lib/libs/somelibdemo/: somelibdemo.h
Code_Tech_and_Tutorials_CMake/3_somelibdemo_Static_lib_and_GIT_submodule_to_use_a_repo_lib/somelibdemo_as_static_lib/src/: main.cpp
Code_Tech_and_Tutorials_CMake/using_makefile_manually/: main.cpp
Code_Tech_and_Tutorials_CMake/using_somelibdemo_Static_Built_library/: save_effort.txt
Code_Tech_and_Tutorials_CMake/using_somelibdemo_Static_Built_library/libs/somelibdemo/: CMakeLists.txt  somelibdemo.cpp
JamiesCMakeTutorial/CMakeTraining/: .~lock.Session 1 - CMake and Building CXX.pptx#  .~lock.Session 2 - More Advanced CMake.pptx#  Session 1 - CMake and Building CXX.pptx
JamiesCMakeTutorial/CMakeTraining/exercises/session1/: CMakeLists.txt  test_regression
JamiesCMakeTutorial/CMakeTraining/exercises/session2/: CMakeLists.txt
JamiesCMakeTutorial/CMakeTraining/exercises/session2/quad_reg/: CMakeLists.txt
cmake_tutorial/: cmake_installing.sh  cppprojectguide.txt
cmake_tutorial/JamiesCmakeTrainingSession/manual_demo/: basic.cpp  manuallycompile.txt  t1
cmake_tutorial/simple_cmake_example/: CMakeLists.txt  hi.cpp  steps_followed.sh
cmake_tutorial/simple_cmake_library/: CMakeLists.txt  steps_followed.sh
cmake_tutorial/simple_cmake_library/example/: CMakeLists.txt  making_lib.cpp
cmake_tutorial/simple_cmake_library/include/: CMakeLists.txt
cmake_tutorial/simple_cmake_library/include/SimpleCmake/: printhello.h
cmake_tutorial/simple_cmake_library/src/: CMakeLists.txt  printhello.cpp
postgres_install_and_use/: installation.sh
